upd: Corrected alignment in Titlebox component.

--- a/src/components/TitleBox/Titlebox.module.scss
+++ b/src/components/TitleBox/Titlebox.module.scss
@@ -15,7 +15,11 @@
       }
 
       p {
-        text-align: center;
+        text-align: left;
+
+        @media(min-width: v.$md) {
+          text-align: center;
+        }
       }
     }
   }
